--- a/templates/layout.html
+++ b/templates/layout.html
@@ -97,6 +97,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="{{ url_for('static', filename = 'js/clean-blog.min.js') }}"></script>
+  <script src="/static/js/prism.js"></script>
 
 </body>
 
